UDP support in Stock6

--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,23 @@
   <description>Ground station control system powered by hbird.</description>
   <url>http://hbird.org</url>
 
+        <parent>                                                                                                                                                                                                                             
+                <groupId>org.sonatype.oss</groupId>                                                                                                                                                                                          
+                <artifactId>oss-parent</artifactId>                                                                                                                                                                                          
+                <version>7</version>                                                                                                                                                                                                         
+        </parent>   
+
+	<properties>
+		<camel-version>2.9.2</camel-version>
+		<activemq-version>5.6.0</activemq-version>
+		<xbean-spring-version>3.5</xbean-spring-version>
+		<log4j-version>1.2.16</log4j-version>
+		<spring-version>3.0.5.RELEASE</spring-version>
+		<jaxb-api-version>2.2.5</jaxb-api-version>
+		<jaxb-impl-version>2.2.5.1</jaxb-impl-version>
+	</properties>
+
+
   <dependencies>
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -41,7 +58,22 @@
       <artifactId>camel-spring</artifactId>
       <version>2.9.2</version>
     </dependency>
-
+	<dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-mina</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+	<dependency>    
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-xstream</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+	<dependency>    
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-http</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+    
     <!-- for testing -->
     <dependency>
       <groupId>org.apache.camel</groupId>
@@ -71,8 +103,30 @@
     	<version>5.6.0</version>
     </dependency>
     <dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-pool</artifactId>
+		<version>5.6.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.activemq</groupId>
+		<artifactId>activemq-camel</artifactId>
+		<version>5.6.0</version>
+	</dependency>
+    <dependency>
     	<groupId>org.hbird.core</groupId>
     	<artifactId>commons</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    	<type>bundle</type>
+    </dependency>
+    <dependency>
+    	<groupId>org.hbird.core</groupId>
+    	<artifactId>xtce</artifactId>
+    	<version>0.0.1-SNAPSHOT</version>
+    	<type>bundle</type>
+    </dependency>
+    <dependency>
+    	<groupId>org.hbird.core</groupId>
+    	<artifactId>space-system-publisher</artifactId>
     	<version>0.0.1-SNAPSHOT</version>
     	<type>bundle</type>
     </dependency>
