--- a/src/main/resources/META-INF/config/configuration.properties
+++ b/src/main/resources/META-INF/config/configuration.properties
@@ -5,4 +5,4 @@ activemq.broker.url=tcp://127.0.0.1:61616
 log.home=${user.home}
 
 # Space System Model
-stocksix.xtce.file=${user.home}/Stock6.xml
+stocksix.xtce.file=target/classes/META-INF/config/Stock6.xml
