--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -9,6 +9,8 @@ log4j.rootLogger=INFO, out
 
 log4j.logger.org.springframework=WARN
 
+log4j.logger.org.hbird=ERROR
+
 
 # CONSOLE appender not used by default
 log4j.appender.out=org.apache.log4j.ConsoleAppender
